<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, EngineerMode!</string>
    <string name="app_name">EngineerMode</string>
    <string name="internal_app_name">InternalEngineerMode</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_engineer_mode">EngineerMode</string>
    <string name="tab_telephony">Telephony</string>
    <string name="tab_connectivity">Connectivity</string>
    <string name="tab_hardware_testing">Hardware Testing</string>
    <string name="tab_location">Location</string>
    <string name="tab_log_and_debugging">Log and Debugging</string>
    <string name="tab_others">Others</string>
    <string name="activiti_notfind">Can not find module!</string>
    <string name="cmmb">CMMB</string>
    <string name="simme_lock">Simme Lock</string>
    <string name="cfu">CFU</string>
    <string name="bandmode">BandMode</string>
    <string name="rat_mode">RAT Mode</string>
    <string name="repeat_call_test">Repeat Call Test</string>
    <string name="network_info">NetworkInfo</string>
    <string name="dualtalk_network_info">Dual Talk NetworkInfo</string>
    <string name="dualtalk_bandmode">Dual Talk BandMode</string>
    <string name="network_setting">Network Setting</string>
    <string name="modem_test">Modem Test</string>
    <string name="rf_desense_test">RF De-sense Test</string>
    <string name="fast_dormancy">Fast Dormancy</string>
    <string name="nfc_6605">NFC(6605)</string>
    <string name="nfc_3110">NFC(MSR3110)</string>
    <string name="fm_receiver">FM Receiver</string>
    <string name="fm_transmitter">FM Transmitter</string>
    <string name="io">IO</string>
    <string name="touchscreen">TouchScreen</string>
    <string name="sd_card_test">SD Card Test</string>
    <string name="sd_test_choose_storage">Test Storage</string>
    <string name="sd_test_stop_test_first">test is running, please stop it first</string>
    <string name="sd_test_sd_removed">sd card was removed</string>
    <string name="audio">Audio</string>
    <string name="camera">Camera</string>
    <string name="cpu_stress_test">CPU Stress Test</string>
    <string name="de_sense">De-Sense</string>
    <string name="digital_standard">Digital Standard</string>
    <string name="usb">USB</string>
    <string name="power">Power</string>
    <string name="tv_out">TV Out</string>
    <string name="matv">MATV</string>
    <string name="device_manager">Device Manager</string>
    <string name="location_basedservice">Location Based Service</string>
    <string name="fused_location_provider">Fused Location Provider</string>
    <string name="auto_dialer">Auto Dialer</string>
    <string name="system_logger">System Logger</string>
    <string name="tag_log">Tag Log</string>
    <string name="mtk_logger">MTKLogger</string>
    <string name="ext_md_logger">ExtModemLog</string>
    <string name="debug_utils">Debug Utils</string>
    <string name="swla">SWLA</string>
    <string name="settings_font">Settings Font</string>
    <string name="cds_information">CDS Information</string>
    <string name="thermal">Thermal</string>
    <string name="non_sleep_mode">Non-sleep mode</string>
    <string name="non_sleep_disable">Disable Non-sleep mode</string>
    <string name="non_sleep_enable">Enable Non-sleep mode</string>
    <string name="pch_data_prefer_title">Mobile data service preferred</string>
    <string name="pch_data_prefer_summary">Allow mobile data transmission at full speed</string>
    <string name="pch_data_prefer_message">Mobile data service preferred is used to improve the data transmission efficiency at the cost of lower call receiving rate. Not recommended to do so.\n\nAre you sure to allow mobile data service preferred?</string>
    <string name="BatteryLog">BatteryLog</string>
    <string name="Log_Record_Interval">Interval Of Info Record [1-100]:</string>
    <string name="battery_info_Log">Battery Info Record:</string>
    <string name="battery_info_Log_Start">Start</string>
    <string name="battery_info_Log_End">Stop</string>
    <string name="battery_info_10">10</string>
    <string name="battery_info_s">s</string>
    <string name="battery_charging">Charging</string>
    <string name="battery_stop">Stop</string>
    <string name="battery_restart">Restart</string>
    <string name="battery_current">Current</string>
    <string name="battery_rise">Rise</string>
    <string name="battery_reduce">Reduce</string>
    <string name="battery_temperature">Battery temperature</string>
    <string name="battery_set">Set</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">\u00B0 C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="GPRS">GPRS</string>
    <string name="SIM1">SIM1</string>
    <string name="SIM2">SIM2</string>
    <string name="IMEI">Write IMEI</string>
    <string name="DefSIMText">Default SIM Setting</string>
    <string name="default_sim1">Default SIM1</string>
    <string name="default_sim2">Default SIM2</string>
    <string name="GPRS_Attached">Attached</string>
    <string name="GPRS_Detached">Detached</string>
    <string name="GPRS_FD">Send FD</string>
    <string name="GPRS_ConfigFD">Config SCRI/FD</string>
    <string name="GPRS_1st_PDP">1st PDP</string>
    <string name="GPRS_2nd_PDP">2nd PDP</string>
    <string name="GPRS_As_Primary">As Primary</string>
    <string name="GPRS_As_Secondary">As Secondary</string>
    <string name="GPRS_Activate_PDP">Activate PDP</string>
    <string name="GPRS_Deactivate_PDP">Deactivate PDP</string>
    <string name="GPRS_1000">1000</string>
    <string name="GPRS_Send_Data">Send Data</string>
    <string name="GPRS_FD_SCREEN_ON">Set FD timer for screen on</string>
    <string name="NetworkInfo_Cell">RR Cell Sel</string>
    <string name="NetworkInfo_Ch">RR Ch Dscr</string>
    <string name="NetworkInfo_Ctrl">RR Ctrl chan</string>
    <string name="NetworkInfo_RACH">RR RACH Ctrl</string>
    <string name="NetworkInfo_LAI">RR LAI Info</string>
    <string name="NetworkInfo_Radio">RR Radio Link</string>
    <string name="NetworkInfo_Meas">RR Meas Rep</string>
    <string name="NetworkInfo_Ca">RR Ca List</string>
    <string name="NetworkInfo_Control">RR Control Msg</string>
    <string name="NetworkInfo_SI2Q">RR SI2Q Info</string>
    <string name="NetworkInfo_MI">RR MI Info</string>
    <string name="NetworkInfo_BLK">RR BLK Info</string>
    <string name="NetworkInfo_TBF">RR TBF Info</string>
    <string name="NetworkInfo_GPRS">RR GPRS Gen</string>
    <string name="NetworkInfo_3GGeneralStatus">3GGeneralStatusInd</string>
    <string name="NetworkInfo_3GSmEmInfo">SmEmInfo</string>
    <string name="NetworkInfo_3GMmEmInfo">3GMmEmInfo</string>
    <string name="NetworkInfo_3GGmmEmInfo">GmmEmInfo</string>
    <string name="NetworkInfo_3GTcmMmiEmInfo">3GTcmMmiEmInfo</string>
    <string name="NetworkInfo_3GCsceEMServCellSStatusInd">3GCsceEMServCellSStatusInd</string>
    <string name="NetworkInfo_3GCsceEmInfoMultiPlmn">3GCsceEmInfoMultiPlmn</string>
    <string name="NetworkInfo_3GMemeEmInfoUmtsCellStatus">3GMemeEmInfoUmtsCellStatus</string>
    <string name="NetworkInfo_3GMemeEmPeriodicBlerReportInd">3GMemeEmPeriodicBlerReportInd</string>
    <string name="NetworkInfo_3GUrrUmtsSrncId">3GUrrUmtsSrncId</string>
    <string name="NetworkInfo_3GSlceEmPsDataRateStatusInd">3GSlceEmPsDataRateStatusInd</string>
    <string name="NetworkInfo_3GMemeEmInfoHServCellInd">3GMemeEmInfoHServCellInd</string>
    <string name="NetworkInfo_3GHandoverSequenceIndStuct">3GHandoverSequenceIndStuct</string>
    <string name="NetworkInfo_3GUl2EmAdmPoolStatusIndStruct">3GUl2EmAdmPoolStatusIndStruct</string>
    <string name="NetworkInfo_3GUl2EmPsDataRateStatusIndStruct">3GUl2EmPsDataRateStatusIndStruct</string>
    <string name="NetworkInfo_3Gul2EmHsdschReconfigStatusIndStruct">3GUl2EmHsdschReconfigStatusIndStruct</string>
    <string name="NetworkInfo_3GUl2EmUrlcEventStatusIndStruct">3GUl2EmUrlcEventStatusIndStruct</string>
    <string name="NetworkInfo_3GUl2EmPeriodicBlerReportInd">3GUl2EmPeriodicBlerReportInd</string>
    <string name="NetworkInfo_xGCsceEMNeighCellSStatusInd">XGCsceEMNeighCellSStatusInd</string>
    <string name="NetworkInfo_1xRTT_Radio">1xRTT Radio</string>
    <string name="NetworkInfo_1xRTT_Info">1xRTT Info</string>
    <string name="NetworkInfo_1xRTT_SCH_Info">1xRTT SCHInfo</string>
    <string name="NetworkInfo_1xRTT_Statistics">1xRTT Statistics</string>
    <string name="NetworkInfo_1xRTT_Serving">1xRTT Serving/Neighbor</string>
    <string name="NetworkInfo_EVDO_Serving_Info">EVDO Serving_Info</string>
    <string name="NetworkInfo_EVDO_Active_Set">EVDO Active Set</string>
    <string name="NetworkInfo_EVDO_Candidate_Set">EVDO Candidate Set</string>
    <string name="NetworkInfo_EVDO_Neighbor_Set">EVDO Neighbor Set</string>
    <string name="NetworkInfo_EVDO_FL">EVDO FL</string>
    <string name="NetworkInfo_EVDO_RL">EVDO RL</string>
    <string name="NetworkInfo_EVDO_State">EVDO State</string>
    <string name="NetworkInfo_3GSlceVoice">3GSpeechCodec</string>
    <string name="NetworkInfo_3GSecurityConfiguration">3GSecurityConfiguration</string>
    <string name="wfd_iot_scenario_mode">Enable scenario mode</string>
    <string name="wfd_iot_drop_dummy">Enable drop dummy-nal</string>
    <string name="wfd_iot_av_sync">Enable av sync</string>
    <string name="wfd_iot_set">Set</string>
    <string name="ptp1_enable_big_core">Enable Tech1 B</string>
    <string name="ptp1_enable_ptp">Enable Tech</string>
    <string name="ptp1_enable_little_core">Enable Tech1 L</string>
    <string name="ptp1_enable_gpu">Enable Tech1 G</string>
    <string name="ptp1_enable_vcore_ao">Enable Tech1 A</string>
    <string name="ptp1_enable_vcore_pdn">Enable Tech1 P</string>
    <string name="ptp2_enable_spark">Enable Tech2 S</string>
    <string name="ptp2_enable_fbb">Enable Tech2 F</string>
    <string name="ptp2_status">Tech2 Status:</string>
    <string name="ptp2_status_unknown">UNKNOWN</string>
    <string name="ATCI_title">ATCI</string>
    <string name="ATCI_enable">Enable ATCI Once</string>
    <string name="ATCI_enable_always">Always enable ATCI</string>
    <string name="ATCI_disable">Disable ATCI</string>
</resources>