<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/View_2G"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/NetworkInfo_Cell"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_Cell" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_Ch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_Ch" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_Ctrl"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_Ctrl" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_RACH"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_RACH" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_LAI"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_LAI" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_Radio"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_Radio" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_Meas"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_Meas" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_Ca"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_Ca" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_Control"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_Control" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_SI2Q"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_SI2Q" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_MI"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_MI" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_BLK"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_BLK" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_TBF"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_TBF" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_GPRS"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_GPRS" >
                </CheckBox>
            </LinearLayout>
        </ScrollView>

        <!-- FOR Common -->
        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/View_COMMON"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/NetworkInfo_3GSmEmInfo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GSmEmInfo" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GMmEmInfo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GMmEmInfo" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GGmmEmInfo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GGmmEmInfo" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GTcmMmiEmInfo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GTcmMmiEmInfo" >
                </CheckBox>
            </LinearLayout>
        </ScrollView>

        <!-- FOR 3G -->
        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/View_3G_COMMON"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/NetworkInfo_3GGeneralStatus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GGeneralStatus" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_xGCsceEMNeighCellSStatusInd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_xGCsceEMNeighCellSStatusInd" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GCsceEMServCellSStatusInd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GCsceEMServCellSStatusInd" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GCsceEmInfoMultiPlmn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GCsceEmInfoMultiPlmn" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GMemeEmPeriodicBlerReportInd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GMemeEmPeriodicBlerReportInd" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GUrrUmtsSrncId"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GUrrUmtsSrncId" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GMemeEmInfoHServCellInd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GMemeEmInfoHServCellInd" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GSlceVoice"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GSlceVoice" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GSecurityConfiguration"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GSecurityConfiguration" >
                </CheckBox>
            </LinearLayout>
        </ScrollView>

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/View_3G_FDD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/NetworkInfo_3GMemeEmInfoUmtsCellStatus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GMemeEmInfoUmtsCellStatus" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GSlceEmPsDataRateStatusInd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GSlceEmPsDataRateStatusInd" >
                </CheckBox>
            </LinearLayout>
        </ScrollView>

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/View_3G_TDD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/NetworkInfo_3GHandoverSequenceIndStuct"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GHandoverSequenceIndStuct" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GUl2EmAdmPoolStatusIndStruct"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GUl2EmAdmPoolStatusIndStruct" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GUl2EmPsDataRateStatusIndStruct"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GUl2EmPsDataRateStatusIndStruct" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3Gul2EmHsdschReconfigStatusIndStruct"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3Gul2EmHsdschReconfigStatusIndStruct" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GUl2EmUrlcEventStatusIndStruct"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GUl2EmUrlcEventStatusIndStruct" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_3GUl2EmPeriodicBlerReportInd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_3GUl2EmPeriodicBlerReportInd" >
                </CheckBox>
            </LinearLayout>
        </ScrollView>

        <!-- FOR CDMA -->
        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/View_CDMA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/NetworkInfo_1xRTT_Radio"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_1xRTT_Radio" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_1xRTT_Info"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_1xRTT_Info" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_1xRTT_SCH_Info"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_1xRTT_SCH_Info" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_1xRTT_Statistics"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_1xRTT_Statistics" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_1xRTT_Serving"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_1xRTT_Serving" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_EVDO_Serving_Info"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_EVDO_Serving_Info" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_EVDO_Active_Set"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_EVDO_Active_Set" >
                </CheckBox>
                
                <CheckBox
                    android:id="@+id/NetworkInfo_EVDO_Candidate_Set"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_EVDO_Candidate_Set" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_EVDO_Neighbor_Set"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_EVDO_Neighbor_Set" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_EVDO_FL"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_EVDO_FL" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_EVDO_RL"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_EVDO_RL" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/NetworkInfo_EVDO_State"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NetworkInfo_EVDO_State" >
                </CheckBox>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</ScrollView>