<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/ATCI_title"
    />
<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/ATCI_enable" android:text="@string/ATCI_enable"></Button>
<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/ATCI_enable_always" android:text="@string/ATCI_enable_always"></Button>
<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/ATCI_disable" android:text="@string/ATCI_disable"></Button>
</LinearLayout>
